# ultrasonic-speckle-noise-reduction

./: .gitignore  README.md  pyproject.toml  setup.sh  start-dev.py  🏠_Home.py
19-0029_Sim_Lieyanto_ADM/: 2022110116415201.avi  2022110116415204.avi
api/: logic.py  utils.py
pages/: 01_💻_Application.py  02_💡_Technical Implementation.py  💻_Application.py
