[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Aditya Wardianto <83759122+ditw11mhs@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.12.2"
numpy = "^1.23.3"
plotly = "^5.10.0"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
